vpc-eks/notifications-incident.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
        - name: log-shipper
          image: busybox
          command: ["sh", "-c", "touch /var/log/shipper.log && tail -f /var/log/shipper.log"]
          volumeMounts:
            - name: shared-logs
              mountPath: /var/log
      volumes:
        - name: shared-logs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  selector:
    app: notifications
  ports:
    - port: 80
      targetPort: 80
